# chebi-cli

./: .gitignore  LICENSE  README.md  chebi-cli-0.1.0.r8.ged62af1-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/chebi_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  core.py  docs.py  sparql.py
tests/: test_cli.py  test_client.py  test_config.py  test_core.py  test_docs.py
